Add justify content center to quote page

--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,7 @@ body {
 
 .quotePage {
   display: flex;
-
-  /* flex-direction: column; */
+  justify-content: center;
   align-items: center;
   height: 60vh;
 }
